# Expense-Tracker-API

./: README.md  package-lock.json  package.json
xpense-frontend/: package.json  (+1 more)
xpense_tracker/: .env  Dockerfile  README.md  alembic.ini  config.py  docker-compose.monitoring.yml  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  requirements.txt
xpense_tracker/alembic/: env.py
xpense_tracker/alembic/versions/: 0ced62c3ddfe_added_new_tables.py  3c960ed656ef_column_changes.py  441f8aca4968_expense_table_added.py  64207eb136c1_added_new_tables.py  68f3427ad8df_first_commit.py  7657b09e1b32_description_of_changes.py  a5566bfc3dbb_column_changes.py  d3f35f24eb4d_first_commit.py  f776d54818e2_new_migration.py
xpense_tracker/config/prometheus/: middleware.py  prometheus.yml
xpense_tracker/database/: cache.py  config.py  database_connection.py  readme.md  tables.py
xpense_tracker/grafana/dashboards/: app-monitoring.json
xpense_tracker/logs/: logging.py
xpense_tracker/schemas/authentication/: auth_model.py
xpense_tracker/schemas/ems/: ems_model.py
xpense_tracker/schemas/ums/: ums_model.py
xpense_tracker/schemas/user_registration/: user_model.py
xpense_tracker/services/ExpenseManagementSystem/: ems.py
xpense_tracker/services/NotificationManagementSystem/: nms.py
xpense_tracker/services/ReportingManagementSystem/: rms.py
xpense_tracker/services/UserManagementSystem/: ums.py
xpense_tracker/services/authentication/: auth.py  oauth2.py  utils.py
xpense_tracker/services/user_registration/: registration.py
xpense_tracker/tests/: test_api.py
(+27 files in other folders)
