[tool.poetry]
name = "xpense-tracker"
version = "0.1.0"
description = ""
authors = ["Hardik <hardikpandey10.hp@gmail.com>"]
readme = "README.md"
packages = [{include = "xpense_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
psycopg2 = "^2.9.9"
poetry = "^1.8.3"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
