[tool.poetry]
name = "xpense-tracker"
version = "0.1.0"
description = ""
authors = ["Hardik <hardikpandey10.hp@gmail.com>"]
readme = "README.md"
packages = [{include = "xpense_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
poetry = "^1.8.3"
alembic = "^1.13.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-mail = "^1.4.1"
rapidfuzz = "^3.9.3"
pytest = "^8.2.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
